fix form script

--- a/Resources/views/_form.html.twig
+++ b/Resources/views/_form.html.twig
@@ -15,7 +15,7 @@
 
 
 <script type="text/javascript">
-$vic('input[name="appventus_victoirecmsbundle_widgetrendertype[mode]"]').change(function() {
+$vic('#appventus_victoirecmsbundle_widgetrendertype_mode').change(function() {
     $vic('.render-mode').hide();
     $vic('#mode-'+$vic(this).val()).show();
 });
