--- a/Resources/views/new.html.twig
+++ b/Resources/views/new.html.twig
@@ -1,7 +1,5 @@
 {% extends 'VictoireCoreBundle:Widget:new.html.twig' %}
 
-{% block form %}
-
-{% include 'VictoireWidgetRenderBundle::_form.html.twig' %}
-
-{% endblock form %}
+{% block form_static %}
+    {% include 'VictoireWidgetRenderBundle::form.html.twig' %}
+{% endblock form_static %}
