--- a/Resources/views/show.html.twig
+++ b/Resources/views/show.html.twig
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-{% if widget.mode == 'route' %}
-    {% render(path(widget.route, widget.params|merge(app.request.query.all))) %}
+{% if kind == 'route' %}
+    {% render(path(route, params|merge(app.request.query.all))) %}
 {% else %}
     <div class="vic-render-widget-container">
-        {{ cms_widget(widget.widget) }}
+        {{ cms_widget(relatedWidget) }}
     </div>
 {% endif %}
 
