--- a/Resources/views/form.html.twig
+++ b/Resources/views/form.html.twig
@@ -1,24 +1,19 @@
-
-
-    <div id="picker-{{ form.mode.vars.data }}" class="vic-tab-pane vic-active">
-        {{ form_start(form) }}
-            {{ form_row(form.mode) }}
-            <div id="mode-widget_reference" class="render-mode" {% if form.vars.value.mode == "route" %}style="display:none"{% endif %}>
-                {{ form_row(form.widget) }}
-            </div>
-            <div id="mode-route" class="render-mode" {% if form.vars.value.mode != "route" %}style="display:none"{% endif %}>
-               {{ form_row(form.route) }}
-               {{ form_row(form.params) }}
-            </div>
-        {{ form_rest(form) }}
-        {{ form_end(form) }}
-    </div>
-    <script type="text/javascript">
-    $vic('#victoire_widget_form_render_mode').change(function() {
-        $vic('.render-mode').hide();
-        $vic('#mode-'+$vic(this).val()).show();
-    });
-    </script>
-
-
-
+<div id="picker-{{ form.kind.vars.data }}" class="vic-tab-pane vic-active">
+    {{ form_start(form) }}
+        {{ form_row(form.kind) }}
+        <div id="kind-{{ constant('Victoire\\Widget\\RenderBundle\\Entity\\WidgetRender::KIND_WIDGET_REFERENCE') }}" class="render-kind" {% if form.vars.value.kind == "route" %}style="display:none"{% endif %}>
+            {{ form_row(form.relatedWidget) }}
+        </div>
+        <div id="kind-{{ constant('Victoire\\Widget\\RenderBundle\\Entity\\WidgetRender::KIND_ROUTE') }}" class="render-kind" {% if form.vars.value.kind != "route" %}style="display:none"{% endif %}>
+           {{ form_row(form.route) }}
+           {{ form_row(form.params) }}
+        </div>
+    {{ form_rest(form) }}
+    {{ form_end(form) }}
+</div>
+<script type="text/javascript">
+$vic('#victoire_widget_form_render_kind').change(function() {
+    $vic('.render-kind').hide();
+    $vic('#kind-'+$vic(this).val()).show();
+});
+</script>
