--- a/Resources/views/new.html.twig
+++ b/Resources/views/new.html.twig
@@ -3,3 +3,6 @@
 {% block form_static %}
     {% include 'VictoireWidgetRenderBundle::form.html.twig' %}
 {% endblock form_static %}
+{% block form_entity %}
+    {% include 'VictoireWidgetRenderBundle::form.html.twig' %}
+{% endblock form_entity %}
